# AgentFusion

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  README.md.bak  README.zh-CN.md  TODO.md  add_python_agent.sql  config.json  config.json.bak  mcp-proposal.md  modification.md  pyproject.toml  requirements.txt  test_auth.py  test_case.json  test_output.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  Dockerfile.agent-fusion  Dockerfile.database-mcp  claude-yolo-docker.sh  claude-yolo-py-docker.sh  claude_code.Dockerfile  claude_code_alpine.Dockerfile  claude_code_py.Dockerfile  devcontainer.json  docker-compose.database-mcp.yml  docker-compose.yml  run_db.sh
.devcontainer/.claude/: settings.local.json
PRD/: agent_memory.md  memory_system_optimization_prd.md  memrecall_agent_implementation.md  memrecall_agent_tools.md
PRD/proposal/: memory_data_layer_prd.md  memory_system_optimization_prd.md  memrecall_agent_implementation.md  memrecall_agent_tools.md
config/: mcp.json  metadata.json
config/mem/: prompt.md
docs/: assistant_agent.md  assistant_agent_detailed.md  autogen.md  graphrag_princeples.md
docs/dev/: README.md  prompt_rules.md
plan/: agent_memory_implementation.md  analyzer_agent_plan.md  critics_plan.md  graphrag_integration_plan.md
python/: pyproject.toml
search_agent/: ToDoList.md
sql/: README_dump.md  dump_config_to_postgres.py  progresdb.sql  requirements_dump.txt  run_dump.sh
src/base/: __init__.py  (+2 more)
test/: dataclass.py  main.py  test_graph_flow_conversion.py  utils.py
tools/: import_prompts.py  verify_import.py
(+1445 files in other folders)
